[project]
name = "db-tools"
version = "0.1.0"
description = "A set of tools for database management and querying."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.16",
    "deepdiff>=8.6.0",
    "pandas>=2.3.2",
    "pymysql>=1.1.2",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "keyring>=25.2.1",
    "keyrings.cryptfile>=1.3.9",

]

[project.scripts]
db-tools = "db_tools.app:main"
debug = "db_tools.debug_wrapper:main"
web-debug = "db_tools.web_debug:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
